0.02
 - Improve doc.
 - Rewrite Changes file to CPAN::Changes::SPEC format.

0.01 2013-08-27
 - First version.