@@ -1,6 +1,7 @@
 0.02
  - Improve doc.
  - Rewrite Changes file to CPAN::Changes::SPEC format.
+ - Update Module::Install to 1.08 version.
 
 0.01 2013-08-27
  - First version.
